# MPointers2.0

./: CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.3D123F1C074454BC.idx  memory_manager.cpp.E1D2B5D312C4CD7C.idx  memory_manager.hpp.365BD7E236D5251B.idx
include/: memory_manager.hpp  mpointer.hpp
proto/: CMakeLists.txt  memory_manager.proto
src/: CMakeLists.txt  main.cpp  memory_manager.cpp
